feat: update description and s3 (#71)
